<resources>
    <string name="app_name">Extended Contacts</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose from Gallery</string>
    <string name="save">Save</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="group_hint">Group (Friends, Work…)</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="favorites">Favorites</string>
    <string name="groups">Groups</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="export_contacts">Export Contacts</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="import_from_phone">Import from Phone</string>
    <string name="import_from_vcf">Import from VCF File</string>
    <string name="select_import_source">Select Import Source</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_all_contacts">All Contacts</string>
    <string name="import_started">Import started…</string>
    <string name="exporting">Exporting…</string>
    <string name="importing_vcf">Importing VCF…</string>
    <string name="search_hint">Search contacts…</string>
    <string name="contact_photo">Contact Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="manage_contacts_desc">Manage your contacts easily</string>
    <string name="import_export">Import/Export</string>
    <string name="back">Back</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="send_email">Send Email</string>
    <string name="group_icon_desc">Group icon</string>
    <string name="view_group_desc">View group</string>
    <string name="toggle_favorite">Toggle favorite</string>
</resources>