<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@drawable/ic_person"
            android:title="@string/nav_all_contacts" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_star_filled"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group"
            android:title="@string/groups" />
    </group>

    <group>
        <item android:title="@string/import_export">
            <menu>
                <item
                    android:id="@+id/nav_import"
                    android:icon="@drawable/ic_add"
                    android:title="@string/import_contacts" />
                <item
                    android:id="@+id/nav_export"
                    android:icon="@drawable/ic_export"
                    android:title="@string/export_contacts" />
            </menu>
        </item>
    </group>

</menu>
